@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="plugin.video.videomonkey"
-  version="1.4.1"
+  version="1.4.2"
   name="VideoMonkey"
   provider-name="sfaxman / bootsy">
   <requires>
